fixed text alignment in footer

--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -131,7 +131,7 @@ main>article>section>div>div>div:not(:last-of-type) {
 
 .quote>p {
     font-style: italic;
-    font-size: 1.5rem;
+    font-size: 2.3rem;
     line-height: normal;
 }
 
@@ -141,7 +141,7 @@ main>article>section>div>div>div:not(:last-of-type) {
 
 .quote h3 {
     color: white;
-    font-size: 2.0rem;
+    font-size: 2.3rem;
 }
 
 
@@ -151,13 +151,16 @@ aside>div {
     padding-block: 8rem;
 }
 
-.aside-box {
+aside>div>* {
     display: inline-block;
-    max-width: 45rem;
 }
 
 aside>div>article:not(:last-of-type) {
-    padding-bottom: 30px;
+    padding-right: 30px;
+}
+
+.aside-box div:first-of-type {
+    height: 19rem;
 }
 
 .aside-box div:last-of-type {
@@ -167,12 +170,14 @@ aside>div>article:not(:last-of-type) {
 }
 
 .aside-box {
-    width: 30%;
+    width: 26rem;
     border: 1px solid #dee1e3;
 }
 
 .aside-box img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 
@@ -185,14 +190,19 @@ footer {
     color: #c8e7f0;
 }
 
+footer>div {
+    width: 19rem;
+    text-align: left;
+    margin: 0 auto;
+}
+
 hr {
-    width: 15%;
-    margin-block: 20px;
+    margin-block: 25px;
 }
 
 footer h3 {
     color: white;
-    font-size: 3rem;
+    font-size: 3.4rem;
 }
 
 footer a {
